--- a/paris.html
+++ b/paris.html
@@ -10,7 +10,7 @@
     <div id="conteneur">
      <header>
           <video autoplay loop muted plays-inline> 
-                <source src="paris.mp4" type="video/mp4">
+                <source src="Paris.mp4" type="video/mp4">
           </video>
             <div class="banner">
                 <div class="navbar">
