--- a/sydney.html
+++ b/sydney.html
@@ -10,7 +10,7 @@
     <div id="conteneur">
      <header>
           <video autoplay loop muted plays-inline> 
-                <source src="syndney.mp4" type="video/mp4">
+                <source src="syndey.mp4" type="video/mp4">
           </video>
             <div class="banner">
                 <div class="navbar">
