--- a/rome.html
+++ b/rome.html
@@ -82,7 +82,7 @@
                     Siège du catholicisme, la basilique Saint-Pierre est un monument religieux majeur. Son dôme emblématique domine le Vatican et offre une vue panoramique sur la ville.  
                 </P>
                 <P>
-                <img src="MR2.jpg" alt="siége" class="image-right">
+                <img src="RM2.jpg" alt="siége" class="image-right">
 
                 </P>
                 <footer></footer>
